<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bits Elevation</string>
    <string name="action_settings">Settings</string>
    <string name="activity_refresh">Refresh</string>
    <string name="activity_latitude">Latitude</string>
    <string name="activity_longitude">Longitude</string>
    <string name="activity_elevation">Elevation</string>
    <string name="activity_accuracy">Accuracy</string>
    <string name="pref_unitsTitle">Units</string>
    <string name="pref_unitsDialogTitle">Units</string>
    <string-array name="pref_units_entries">
        <item>meters</item>
        <item>feet</item>
    </string-array>
    <string-array name="pref_units_values">
        <item>meters</item>
        <item>feet</item>
    </string-array>
    <string name="pref_units_default">meters</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
